fix: misaligned role icons (#607)
* fix: misaligned role icons

* fix polter css

--- a/react_main/src/css/roles.css
+++ b/react_main/src/css/roles.css
@@ -581,7 +581,7 @@
 }
 
 .role-Mafia-Poltergeist {
-    background-position: -600px -120px;
+    background-position: -810px -40px;
 }
 
 /* 
@@ -748,11 +748,11 @@
 */
 
 .role-Split-Decision-Red-Member {
-    background-position: -330px -160px;
+    background-position: -60px -160px;
 }
 
 .role-Split-Decision-Bomber {
-    background-position: -360px -160px;
+    background-position: -90px -160px;
 }
 
 /*
@@ -760,7 +760,7 @@
 */
 
 .role-Split-Decision-Gambler {
-    background-position: -630px -160px;
+    background-position: -120px -160px;
 }
 
 
